# xtask-utils

./: .commitlintrc.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: README.md
examples/simple/: greet.rs  main.rs  new_task.rs
examples/uses_script/: main.rs  task.rs
src/: any_err.rs  command_ext.rs  lib.rs  pipe.rs  result_ext.rs
test-helper/: Cargo.toml
test-helper/src/: main.rs
tests/: any_err.rs  command_ext.rs  pipe.rs  result_ext.rs
tests/common/: mod.rs
