[package]
name = "xtask-utils"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.2.0"
edition = "2021"
description = "A collection of utilities for xtasks"
license = "MIT OR Apache-2.0"
publish = false
autoexamples = false

[features]
any_err = []
command_ext = []
script = ["command_ext", "result_ext"]
result_ext = ["any_err"]

[[test]]
name = "any_err"
required-features = ["any_err"]

[[test]]
name = "result_ext"
required-features = ["result_ext"]

[[test]]
name = "command_ext"
required-features = ["command_ext"]

[[test]]
name = "pipe"
required-features = ["script"]

[[example]]
name = "simple"
path = "examples/simple/main.rs"

[[example]]
name = "uses_script"
path = "examples/uses_script/main.rs"
required-features = ["script"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
